--- a/public/panel.html
+++ b/public/panel.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>Panel de Cupones</title>
+</head>
 <body>
-<img src="logo.png" width="120"><br>
-<h2>Panel Cupones</h2>
 
-<div id="stats"></div>
-<input id="tel" placeholder="Teléfono">
-<button onclick="crear()">Generar QR</button>
-<div id="out"></div>
-<br>
-<a href="/exportar">Exportar reporte</a>
+<h2>Crear cupón</h2>
+
+<input id="telefono" placeholder="Ej: 56912345678">
+<button onclick="crearCupon()">Crear cupón</button>
+
+<hr>
+
+<div id="resultado"></div>
 
 <script>
-function load(){
-  fetch("/stats").then(r=>r.json()).then(d=>{
-    stats.innerHTML = `
-      Total: ${d.total}<br>
-      Usados: ${d.usados}<br>
-      Hoy: ${d.hoy}<br>
-      Usados hoy: ${d.usadosHoy}
-    `;
-  });
-}
+async function crearCupon() {
+  const telefono = document.getElementById("telefono").value;
 
-function crear(){
-  fetch("/crear",{
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ telefono: tel.value })
-  }).then(r=>r.json()).then(c=>{
-    out.innerHTML = `
-      <img src="${c.qr}" width="200"><br>
-      <a href="/cupon/${c.id}" target="_blank">Ver cupón</a>
-    `;
-    tel.value="";
-    load();
+  if (!telefono) {
+    alert("Ingresa un número");
+    return;
+  }
+
+  const res = await fetch("/crear", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ telefono })
   });
+
+  const data = await res.json();
+
+  if (data.error) {
+    alert(data.error);
+    return;
+  }
+
+  const linkCupon = `${location.origin}/cupon/${data.id}`;
+  const mensaje = encodeURIComponent(
+    `Hola 👋\nAquí tienes tu cupón válido por hoy:\n${linkCupon}`
+  );
+
+  const whatsappURL = `https://wa.me/${telefono}?text=${mensaje}`;
+
+  document.getElementById("resultado").innerHTML = `
+    <h3>Cupón generado</h3>
+    <img src="${data.qr}" width="200"><br><br>
+
+    <a href="${whatsappURL}" target="_blank">
+      📲 Enviar por WhatsApp
+    </a>
+
+    <p><b>Teléfono:</b> ${telefono}</p>
+  `;
 }
-load();
 </script>
+
 </body>
 </html>
