--- a/public/panel.html
+++ b/public/panel.html
@@ -2,83 +2,91 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Crear Cupón</title>
+<title>Panel Crear Cupón</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    background: #111;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    color: white;
-  }
+body{
+  margin:0;
+  height:100vh;
+  background:#111;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-family:Arial, sans-serif;
+  color:white;
+}
 
-  .card {
-    width: 100%;
-    max-width: 420px;
-    background: #1e1e1e;
-    padding: 30px 20px;
-    border-radius: 15px;
-    text-align: center;
-  }
+.card{
+  width:100%;
+  max-width:420px;
+  background:#1e1e1e;
+  padding:30px 20px;
+  border-radius:18px;
+  text-align:center;
+}
 
-  h1 {
-    font-size: 30px;
-    margin-bottom: 20px;
-  }
+h1{
+  font-size:32px;
+  margin-bottom:20px;
+}
 
-  input {
-    width: 100%;
-    padding: 18px;
-    font-size: 22px;
-    border-radius: 10px;
-    border: none;
-    margin-bottom: 20px;
-    text-align: center;
-  }
+input{
+  width:100%;
+  padding:18px;
+  font-size:22px;
+  border-radius:12px;
+  border:none;
+  margin-bottom:20px;
+  text-align:center;
+}
 
-  button {
-    width: 100%;
-    height: 80px;
-    font-size: 26px;
-    background: #2196f3;
-    color: white;
-    border: none;
-    border-radius: 15px;
-    font-weight: bold;
-  }
+button{
+  width:100%;
+  height:85px;
+  font-size:26px;
+  font-weight:bold;
+  background:#2196f3;
+  color:white;
+  border:none;
+  border-radius:16px;
+}
 
-  img {
-    margin-top: 25px;
-    width: 260px;
-  }
+img{
+  margin-top:20px;
+  width:260px;
+}
 
-  .stats {
-    margin-top: 30px;
-    padding: 20px;
-    background: #111;
-    border-radius: 12px;
-    font-size: 20px;
-    text-align: left;
-  }
+a{
+  display:block;
+  margin-top:20px;
+  font-size:22px;
+  color:#4caf50;
+  font-weight:bold;
+  text-decoration:none;
+}
 
-  .stats p {
-    margin: 10px 0;
-  }
+.stats{
+  margin-top:30px;
+  padding:18px;
+  background:#111;
+  border-radius:12px;
+  font-size:20px;
+  text-align:left;
+}
 
-  .ok {
-    color: #4caf50;
-    font-weight: bold;
-  }
+.stats p{
+  margin:8px 0;
+}
+
+.ok{
+  color:#4caf50;
+  font-weight:bold;
+}
 </style>
 </head>
 
 <body>
-
 <div class="card">
   <h1>🎟 Crear cupón</h1>
 
@@ -88,7 +96,6 @@
 
   <div id="out"></div>
 
-  <!-- STATS -->
   <div class="stats" id="stats">
     Cargando estadísticas...
   </div>
@@ -99,32 +106,40 @@ async function crear(){
   const res = await fetch("/crear",{
     method:"POST",
     headers:{ "Content-Type":"application/json" },
-    body:JSON.stringify({ telefono: tel.value })
+    body: JSON.stringify({ telefono: tel.value })
   });
 
+  if(!res.ok){
+    out.innerHTML = "<p style='color:red;font-size:20px'>❌ Error al crear cupón</p>";
+    return;
+  }
+
   const c = await res.json();
+
+  if(!c.qr){
+    out.innerHTML = "<p style='color:red;font-size:20px'>❌ No se recibió el QR</p>";
+    console.log(c);
+    return;
+  }
 
   out.innerHTML = `
     <p style="font-size:22px;margin-top:20px;">QR generado</p>
     <img src="${c.qr}">
-    <br><br>
-    <a 
-      style="font-size:22px;color:#4caf50;font-weight:bold"
-      target="_blank"
-      href="https://wa.me/56${c.telefono}?text=Tu%20cupón:%20${location.origin}/cupon/${c.id}">
-      📲 Enviar por WhatsApp
+    <a target="_blank"
+       href="https://wa.me/56${c.telefono}?text=Tu%20cupón:%20${location.origin}/cupon/${c.id}">
+       📲 Enviar por WhatsApp
     </a>
   `;
 
-  cargarStats(); // refresca stats al crear
+  tel.value = "";
+  cargarStats();
 }
 
 async function cargarStats(){
   const r = await fetch("/stats");
   const s = await r.json();
-
   document.getElementById("stats").innerHTML = `
-    <p>📊 <b>Resumen de hoy</b></p>
+    <p><b>📊 Resumen de hoy</b></p>
     <p>🎟 Creados hoy: <span class="ok">${s.hoy}</span></p>
     <p>✅ Canjeados hoy: <span class="ok">${s.usadosHoy}</span></p>
     <p>📦 Total histórico: <b>${s.total}</b></p>
@@ -133,7 +148,5 @@ async function cargarStats(){
 
 cargarStats();
 </script>
-
 </body>
 </html>
-
